8199511: Do not generate g1_{pre|post}_barrier_slow_id without CardTable-enabled barrier set

Reviewed-by: rkennke, kvn, pliden, stefank